# File_service

./: .dockerignore   .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: config.py  main.py
src/containers/: configs.py
src/files/: dependencies.py  logging_conf.py  router.py  schema.py  service.py  utils.py
