[tool.poetry]
name = "file-service"
version = "0.1.0"
description = ""
authors = ["Dmitriy <pilevichdima20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
dependency-injector = "^4.45.0"
aioboto3 = "^13.4.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
